--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "no-trailing-spaces": "error",
     "eol-last": ["error", "always"],
     "object-curly-spacing": ["error", "always"],
-    "array-bracket-spacing": ["error", "never"]
+    "array-bracket-spacing": ["error", "never"],
+    "react/display-name": "off"
   }
 }
