--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-tailwindcss": "^3.17.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
