--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,12 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# enviroment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 #local vscode config
 .vscode
