--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "variety-blog",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "prisma generate"
   },
   "dependencies": {
     "@midudev/tailwind-animations": "^0.0.7",
+    "@prisma/client": "^5.15.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "lucide-react": "^0.394.0",
@@ -26,7 +31,9 @@
     "eslint-config-next": "14.2.3",
     "eslint-plugin-tailwindcss": "^3.17.3",
     "postcss": "^8",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
