--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@midudev/tailwind-animations": "^0.0.7",
     "@prisma/client": "^5.15.0",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.4",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "lucide-react": "^0.394.0",
