--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "generate": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "3.6.0",
     "@midudev/tailwind-animations": "^0.0.7",
     "@prisma/client": "^5.15.0",
     "@supabase/ssr": "^0.3.0",
@@ -23,7 +24,9 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "2.3.0"
+    "react-hook-form": "7.51.5",
+    "tailwind-merge": "2.3.0",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
