--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "7.51.5",
+    "sonner": "^1.5.0",
     "tailwind-merge": "2.3.0",
     "zod": "3.23.8"
   },
