--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "14.2.3",
     "react-hook-form": "7.51.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "2.3.0",
