--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-dropzone": "14.2.3",
     "react-hook-form": "7.51.5",
+    "react-intersection-observer": "9.10.3",
     "sonner": "^1.5.0",
     "tailwind-merge": "2.3.0",
     "zod": "3.23.8"
